tests/ui/inherent-impl.stderr
error: expected impl Trait for Type
 --> tests/ui/inherent-impl.rs:4:1
  |
3 | #[typetag::serde]
  | ----------------- in this procedural macro expansion
4 | impl Struct {}
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `typetag::serde` (in Nightly builds, run with -Z macro-backtrace for more info)
