tests/ui/inherent-impl.rs
pub struct Struct;

#[typetag::serde]
impl Struct {}

fn main() {}
